# dupefindr

./: Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  rust-win.yml  rust.yml
data/: testnodupe.txt
src/: errors.rs  main.rs  progressbar.rs
testdata/: testdupe1set2.txt
testdata/dir2/: testdupe12.txt
