[package]
name = "dupefindr"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = "1.3.0"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
glob = "0.3.2"
humantime = "2.1.0"
indicatif = "0.17.9"
md-5 = "0.10.6"
num_cpus = "1.16.0"
tempfile = "3.15.0"
threadpool = "1.8.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

