[package]
name = "dupefindr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
bytesize = "1.3.0"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
crossterm = "0.28.1"
csv = "1.3.1"
glob = "0.3.2"
humantime = "2.1.0"
indicatif = "0.17.11"
md-5 = "0.10.6"
num_cpus = "1.16.0"
tempfile = "3.15.0"
threadpool = "1.8.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

